@@ -80,6 +80,23 @@ StrDup(
 	return	(str);
 }
 
+extern	char	*
+StrnDup(
+	char	*s,
+	size_t	len)
+{
+	char	*str;
+
+	if		(  s  !=  NULL  ) {
+		str = xmalloc(len+1);
+		strncpy(str,s,len);
+		str[len] = '\0';
+	} else {
+		str = NULL;
+	}
+	return	(str);
+}
+
 extern	long
 StrToInt(
 	char	*str,
